--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@phosphor-icons/react": "^2.1.7",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuidv7": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
